--- a/Web.config
+++ b/Web.config
@@ -11,16 +11,15 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	  <roleManager defaultProvider="UserRollProviders" enabled="true">
-		  <providers>
-			  <clear />
-			  <add name="UserRollProviders" type="WebApplication1.Models.UserRollProviders" />
-		  </providers>
-	  </roleManager>
-	  
-	  <authentication mode="Forms">
-		  <forms loginUrl="Login/login"></forms>
-	  </authentication>
+    <roleManager defaultProvider="UserRollProviders" enabled="true">
+      <providers>
+        <clear />
+        <add name="UserRollProviders" type="WebApplication1.Models.UserRollProviders" />
+      </providers>
+    </roleManager>
+    <authentication mode="Forms">
+      <forms loginUrl="Login/login"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -62,4 +61,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<connectionStrings><add name="SampleDbEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RAJAT_VERITOS\SQLEXPRESS;initial catalog=SampleDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <!--<add name="ddc1Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.15.117.109;user id=ddc1;password=Madhav@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ddc_login2Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=204.93.172.37;initial catalog=ddc_login2;user id=sa;password=prHR_45a;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ddc1Entities1" connectionString="metadata=res://*/Models.Model1ddc.csdl|res://*/Models.Model1ddc.ssdl|res://*/Models.Model1ddc.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.15.117.109;user id=ddc1;password=Madhav@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
