--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -134,6 +134,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\getapplicationcountdata_Result.cs">
+      <DependentUpon>Model1ddc.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\getapplicationcountdata_Result1.cs">
+      <DependentUpon>Model1ddc.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
