--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -774,6 +774,7 @@
     <Content Include="Views\Shared\_LayoutPage1.cshtml" />
     <Content Include="Views\Main\Index.cshtml" />
     <Content Include="Views\Main\Admin.cshtml" />
+    <Content Include="Views\Main\Ad_Seach_Prac.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
