--- a/bin/WebApplication1.dll.config
+++ b/bin/WebApplication1.dll.config
@@ -20,6 +20,7 @@
     <authentication mode="Forms">
       <forms loginUrl="Login/login"></forms>
     </authentication>
+	  <customErrors mode="On"></customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
